# 36-hours-a-day

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  schema.yaml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  main.py  manage.py  requirements.txt  schema.yaml
backend/api/: routers.py  serializers.py  urls.py  views.py
backend/api/endpoints/: __init__.py  temporary_stub.py
backend/core/: config.py  pagination.py
backend/core/management/commands/: loadcsv.py
backend/product/: admin.py  models.py
backend/product/migrations/: 0001_initial.py  0002_alter_product_ean_13.py  0003_alter_productdialerkey_product_key.py  0004_mlresult.py
backend/prosept_match_product/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/App/: App.css  App.js
frontend/src/components/Card/: Card.css  Card.js
frontend/src/components/CardList/: CardList.css  CardList.js
frontend/src/components/Filter/: Filter.css  Filter.js
frontend/src/components/Header/: Header.css  Header.js
frontend/src/components/Item/: Item.css  Item.js
frontend/src/components/Logo/: Logo.css  Logo.js
frontend/src/components/Main/: Main.js
frontend/src/constants/: constants.js
frontend/src/utils/: dealersApi.js
infra/: .env.exampl  .env.example  docker-compose.infra.yml  docker-compose.local.yml  docker-compose.local1.yml  docker-compose.yml  nginx.conf
infra/docs/: nginx.conf
ml/: Dockerfile  app.py  model.py  requirements.txt  setting.py
