[tool.poetry]
name = "36-hours-a-day"
version = "0.1.0"
description = ""
authors = ["Petr Oganin <necroshizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.4"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.7"
pyyaml = "^6.0.1"
djoser = "^2.2.2"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
